Updated rest of planets

--- a/Semana 3 - Planetas y Satélites/Jupiter.html
+++ b/Semana 3 - Planetas y Satélites/Jupiter.html
@@ -10,16 +10,90 @@
         <link rel="stylesheet" href="css/planetsPage-navbar.css">
         <title>Sistema solar | Júpiter</title>
     </head>
+
     <body>
         <nav>
             <a href="index.html">INICIO</a>
             <a href="Tierra.html">TIERRA</a>
             <a href="Marte.html">MARTE</a>
-            <a href="Jupiter.html">JUPITER</a>
+            <a class="active" href="Jupiter.html">JÚPITER</a>
             <a href="Saturno.html">SATURNO</a>
             <a href="Urano.html">URANO</a>
             <a href="Neptuno.html">NEPTUNO</a>
         </nav>
+        <section class="row">
+            <div class="column landing-image">
+                <img class="" src="img/jupiter.png">
+            </div>
+            <div class="column landing-message">
+                <div class="text-container">
+                    <h1>JÚPITER<br></h1>
+                    <p>
+                        Júpiter (en latín: Iuppiter), también llamado Jove (Iovis), es el principal dios de la mitología
+                        romana, padre de dioses y de hombres (pater deorum et hominum). Su equivalente griego es Zeus
+                        (en griego antiguo Ζεύς Zéus), aunque esta deidad latina no fue tomada de la mitología griega,
+                        como sí ocurrió en otros casos. Sus atributos son el águila, el rayo, y el cetro.
+                        En la actualidad, el dios Júpiter es adorado por grupos religiosos de reconstruccionismo pagano
+                        como el Camino Romano a los Dioses, Nova Roma, entre otros, que buscan la renovación de la
+                        religión romana antigua.
+                        Hijo de Saturno y Ops, Júpiter fue la deidad suprema de la tríada capitolina, integrada además
+                        por su hermana y esposa, Juno, y por su hija, Minerva.
+
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="moons-container">
+            <h1>LUNAS DE JÚPITER</h1>
+            <div class="row">
+                <div class="column landing-image">
+                    <div class="column landing-image">
+                        <img class="" src="img/ioJupiter.jpg">
+                    </div>
+                    <div class="column landing-message">
+                        <div class="text-container">
+                            <h2>IO</h2>
+                            <p>
+                                Ío es el satélite galileano más cercano a Júpiter. Es el tercer satélite por su tamaño,
+                                tiene la más alta densidad entre todos los satélites y, en proporción, la menor cantidad
+                                de
+                                agua entre todos los objetos conocidos del sistema solar. Fue descubierto por Galileo
+                                Galilei en
+                                1610. Recibe su nombre de Ío, una de las muchas doncellas de las que Zeus se enamoró en
+                                la mitología
+                                griega, aunque inicialmente recibió el nombre de Júpiter I por ser el primer satélite de
+                                Júpiter
+                                según su cercanía al planeta.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="column landing-message">
+                    <div class="column landing-image">
+                        <img class="" src="img/europaJupiter.jpg">
+                    </div>
+                    <div class="column landing-message">
+                        <div class="text-container">
+                            <h2>EUROPA </h2>
+                            <p>
+                                Europa es el sexto satélite natural de Júpiter en orden creciente de distancia y el más
+                                pequeño de los cuatro satélites galileanos. Fue descubierto en 1610 por Galileo
+                                y nombrado por Europa, la madre del rey Minos de Creta y amante de Zeus. Simon Marius
+                                sugirió
+                                el nombre tras su descubrimiento, pero este nombre, así como el nombre de los otros
+                                satélites
+                                galileanos, no fue de uso común hasta mediados del siglo XX. En gran parte de la
+                                literatura astronómica
+                                temprana aparece mencionado por su designación numeral romana, Júpiter II, o como el
+                                segundo satélite
+                                de Júpiter.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </body>
 
 </html>
