--- a/Semana 3 - Planetas y Satélites/Neptuno.html
+++ b/Semana 3 - Planetas y Satélites/Neptuno.html
@@ -10,16 +10,81 @@
         <link rel="stylesheet" href="css/planetsPage-navbar.css">
         <title>Sistema solar | Neptuno</title>
     </head>
+
     <body>
         <nav>
             <a href="index.html">INICIO</a>
             <a href="Tierra.html">TIERRA</a>
             <a href="Marte.html">MARTE</a>
-            <a href="Jupiter.html">JUPITER</a>
+            <a href="Jupiter.html">JÚPITER</a>
             <a href="Saturno.html">SATURNO</a>
             <a href="Urano.html">URANO</a>
-            <a href="Neptuno.html">NEPTUNO</a>
+            <a class="active" href="Neptuno.html">NEPTUNO</a>
         </nav>
+        <section class="row">
+            <div class="column landing-image">
+                <img class="" src="img/neptuno.jpg">
+            </div>
+            <div class="column landing-message">
+                <div class="text-container">
+                    <h1>NEPTUNO<br></h1>
+                    <p>
+                        Neptuno es el octavo planeta en distancia respecto al Sol y el más lejano del sistema solar.
+                        Forma parte de los denominados planetas exteriores, y dentro de estos, es uno de los gigantes
+                        helados, y es el primero que fue descubierto gracias a predicciones matemáticas. Su nombre fue
+                        puesto en honor al dios romano del mar —Neptuno—, y es el cuarto planeta en diámetro y el
+                        tercero más grande en masa. Su masa es diecisiete veces la de la Tierra y ligeramente mayor que
+                        la de su planeta «gemelo» Urano, que tiene quince masas terrestres y no es tan denso. En
+                        promedio, Neptuno orbita el Sol a una distancia de 30,1 ua. Su símbolo astronómico es ♆, una
+                        versión estilizada del tridente del dios Neptuno.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="moons-container">
+            <h1>LUNAS DE NEPTUNO</h1>
+            <div class="row">
+                <div class="column landing-image">
+                    <div class="column landing-image">
+                        <img class="" src="img/proteoNeptuno.jpg">
+                    </div>
+                    <div class="column landing-message">
+                        <div class="text-container">
+                            <h2>PROTEO</h2>
+                            <p>
+                                Proteo es el segundo satélite más grande de Neptuno, detrás de Tritón. Fue descubierto
+                                en 1989 por Stephen Synnott
+                                gracias a las imágenes tomadas por la sonda espacial Voyager 2. Es uno de los cuerpos
+                                más oscuros del sistema solar
+                                ya que solo refleja el 6 % de la luz solar que recibe, por lo que no ha podido ser
+                                descubierto antes del paso de la Voyager 2.
+                                Lleva el nombre de Proteus, el dios marino cambia - forma de la mitología griega.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="column landing-message">
+                    <div class="column landing-image">
+                        <img class="" src="img/tritonNeptuno.jpg">
+                    </div>
+                    <div class="column landing-message">
+                        <div class="text-container">
+                            <h2>TRITÓN</h2>
+                            <p>
+                                Tritón es un satélite de Neptuno que se encuentra a 4500 millones de kilómetros del Sol.
+                                Es uno de los astros más fríos del sistema solar
+                                (-235 °C). Descubierto por William Lassell el 10 de octubre de 1846, solo 17 días
+                                después del propio descubrimiento del planeta,
+                                debe su nombre al dios Tritón de la mitología griega. Con un diámetro de 2707 km, Tritón
+                                es el satélite más grande de Neptuno y
+                                el séptimo del sistema solar, además de ser la única luna de gran tamaño que posee una
+                                órbita retrógrada, es decir, una órbita cuya
+                                dirección es contraria a la rotación del planeta.
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </body>
 
