--- a/Semana 3 - Planetas y Satélites/Tierra.html
+++ b/Semana 3 - Planetas y Satélites/Tierra.html
@@ -14,7 +14,7 @@
     <body>
         <nav>
             <a href="index.html">INICIO</a>
-            <a href="Tierra.html">TIERRA</a>
+            <a class="active" href="Tierra.html">TIERRA</a>
             <a href="Marte.html">MARTE</a>
             <a href="Jupiter.html">JUPITER</a>
             <a href="Saturno.html">SATURNO</a>
@@ -27,16 +27,54 @@
             </div>
             <div class="column landing-message">
                 <div class="text-container">
-                    <h1>El planeta Tierra<br></h1>
+                    <h1>El PLANETA TIERRA<br></h1>
                     <p>
-                        La atmósfera terrestre tiene el grosor perfecto para mantener la temperatura templada del planeta, para que seres vivos como nosotros podamos vivir en él. 
-                        Es el único planeta de nuestro sistema solar que sabemos que tiene las condiciones necesarias para que haya vida. Está compuesto por nitrógeno, en su mayor parte, 
-                        pero tiene una buena cantidad de oxígeno, que es lo que nos permite respirar. Actualmente, hay muchos satélites en órbita alrededor de la Tierra, 
-                        tomando fotos y realizando mediciones. Esto nos permite saber más cosas sobre el clima, los océanos, la tierra, el cambio climático y muchos otros temas importantes.
+                        La atmósfera terrestre tiene el grosor perfecto para mantener la temperatura templada del
+                        planeta, para que seres vivos como nosotros podamos vivir en él.
+                        Es el único planeta de nuestro sistema solar que sabemos que tiene las condiciones necesarias
+                        para que haya vida. Está compuesto por nitrógeno, en su mayor parte,
+                        pero tiene una buena cantidad de oxígeno, que es lo que nos permite respirar. Actualmente, hay
+                        muchos satélites en órbita alrededor de la Tierra,
+                        tomando fotos y realizando mediciones. Esto nos permite saber más cosas sobre el clima, los
+                        océanos, la tierra, el cambio climático y muchos otros temas importantes.
                     </p>
                 </div>
             </div>
-            
+        </section>
+        <section class="moons-container">
+            <h1>SATÉLITE DE LA TIERRA</h1>
+            <div class="row">
+                <div class="column landing-image">
+                    <div class="column landing-image">
+                        <img class="" src="img/luna.webp">
+                    </div>
+                    <div class="column landing-message">
+                        <div class="text-container">
+                            <h2>LA LUNA</h2>
+                            <p>
+                                La Luna es el único satélite natural de la Tierra. Con un diámetro ecuatorial de 3476
+                                km, es el quinto satélite más grande del sistema solar,
+                                mientras que en cuanto al tamaño proporcional respecto a su planeta es el satélite más
+                                grande: un cuarto del diámetro de la Tierra y 1/81 de su masa. Es,
+                                además, después de Ío, el segundo satélite más denso. Se encuentra en relación síncrona
+                                con la Tierra, siempre mostrando la misma cara hacia el planeta.
+                                El hemisferio visible está marcado con oscuros mares lunares
+                                de origen volcánico entre las brillantes montañas antiguas y los destacados astroblemas.
+                                A pesar de ser, en apariencia, el objeto más brillante en el cielo después del Sol, su
+                                superficie es en realidad muy oscura,
+                                con una reflexión similar a la del carbón. Su prominencia en el cielo y su ciclo regular
+                                de fases han hecho de la Luna un objeto con importante
+                                influencia cultural desde la antigüedad, tanto en el lenguaje como en el calendario, el
+                                arte o la mitología. La influencia gravitatoria de la Luna produce
+                                las mareas y el aumento de la duración del día. La distancia orbital de la Luna, cerca
+                                de treinta veces el diámetro de la Tierra, hace que se vea en el cielo con
+                                el mismo tamaño que el Sol y permite que la Luna cubra exactamente al Sol en los
+                                eclipses solares totales
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </body>
 
