--- a/Semana 3 - Planetas y Satélites/Urano.html
+++ b/Semana 3 - Planetas y Satélites/Urano.html
@@ -10,16 +10,76 @@
         <link rel="stylesheet" href="css/planetsPage-navbar.css">
         <title>Sistema solar | Urano</title>
     </head>
+
     <body>
         <nav>
             <a href="index.html">INICIO</a>
             <a href="Tierra.html">TIERRA</a>
             <a href="Marte.html">MARTE</a>
-            <a href="Jupiter.html">JUPITER</a>
+            <a href="Jupiter.html">JÚPITER</a>
             <a href="Saturno.html">SATURNO</a>
-            <a href="Urano.html">URANO</a>
+            <a class="active" href="Urano.html">URANO</a>
             <a href="Neptuno.html">NEPTUNO</a>
         </nav>
+        <section class="row">
+            <div class="column landing-image">
+                <img class="" src="img/urano.png">
+            </div>
+            <div class="column landing-message">
+                <div class="text-container">
+                    <h1>URANO<br></h1>
+                    <p>
+                        Urano es el séptimo planeta del sistema solar, el tercero de mayor tamaño, y el cuarto más
+                        masivo. Se llama así en honor de la divinidad griega del cielo Urano (del griego antiguo
+                        Οὐρανός), el padre de Crono (Saturno) y el abuelo de Zeus (Júpiter). Aunque es detectable a
+                        simple vista en el cielo nocturno, no fue catalogado como planeta por los astrónomos de la
+                        antigüedad debido a su escasa luminosidad y a la lentitud de su órbita. William Herschel
+                        anunció su descubrimiento el 13 de marzo de 1781, ampliando las fronteras entonces conocidas del
+                        sistema solar, por primera vez en la historia moderna. Urano es también el primer planeta
+                        descubierto por medio de un telescopio.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="moons-container">
+            <h1>LUNAS DE URANO</h1>
+            <div class="row">
+                <div class="column landing-image">
+                    <div class="column landing-image">
+                        <img class="" src="img/oberonUrano.jpg">
+                    </div>
+                    <div class="column landing-message">
+                        <div class="text-container">
+                            <h2>OBERÓN</h2>
+                            <p>
+                                Oberón o Urano IV es el más exterior de los satélites principales del planeta Urano. 
+                                Es el segundo más grande y masivo de Urano y el noveno más masivo del sistema solar. Descubierto por 
+                                William Herschel el 11 de enero de 1787, Oberón recibe su nombre de un personaje, el rey de las Hadas, de la
+                                obra de William Shakespeare El sueño de una noche de verano. Su órbita está parcialmente fuera de la magnetosfera de
+                                Urano.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="column landing-message">
+                    <div class="column landing-image">
+                        <img class="" src="img/mirandaUrano.jpg">
+                    </div>
+                    <div class="column landing-message">
+                        <div class="text-container">
+                            <h2>MIRANDA</h2>
+                            <p>
+                                Miranda, también designado como Urano I, es el menor de los cinco satélites principales del 
+                                planeta Urano y el último en ser descubierto hasta el sobrevuelo de Urano por la sonda espacial 
+                                Voyager 2. Descubierto por Gerard Kuiper el 16 de febrero de 1948, Miranda recibe su nombre de un personaje —la hija del mago Próspero— 
+                                de la obra de William Shakespeare La Tempestad.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </body>
 
 </html>
