Updated img format to be vectorized png

--- a/Semana 3 - Planetas y Satélites/Saturno.html
+++ b/Semana 3 - Planetas y Satélites/Saturno.html
@@ -50,7 +50,7 @@
             <div class="row">
                 <div class="column landing-image">
                     <div class="column landing-image">
-                        <img class="" src="img/tetisSaturno.jpg">
+                        <img class="" src="img/tetisSaturno.png">
                     </div>
                     <div class="column landing-message">
                         <div class="text-container">
