--- a/Semana 3 - Planetas y Satélites/Jupiter.html
+++ b/Semana 3 - Planetas y Satélites/Jupiter.html
@@ -48,7 +48,7 @@
             <div class="row">
                 <div class="column landing-image">
                     <div class="column landing-image">
-                        <img class="" src="img/ioJupiter.jpg">
+                        <img class="" src="img/ioJupiter.png">
                     </div>
                     <div class="column landing-message">
                         <div class="text-container">
@@ -70,7 +70,7 @@
                 </div>
                 <div class="column landing-message">
                     <div class="column landing-image">
-                        <img class="" src="img/europaJupiter.jpg">
+                        <img class="" src="img/europaJupiter.png">
                     </div>
                     <div class="column landing-message">
                         <div class="text-container">
