--- a/Semana 3 - Planetas y Satélites/Neptuno.html
+++ b/Semana 3 - Planetas y Satélites/Neptuno.html
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="column landing-image">
                     <div class="column landing-image">
-                        <img class="" src="img/proteoNeptuno.jpg">
+                        <img class="" src="img/proteoNeptuno.png">
                     </div>
                     <div class="column landing-message">
                         <div class="text-container">
@@ -65,7 +65,7 @@
                 </div>
                 <div class="column landing-message">
                     <div class="column landing-image">
-                        <img class="" src="img/tritonNeptuno.jpg">
+                        <img class="" src="img/tritonNeptuno.png">
                     </div>
                     <div class="column landing-message">
                         <div class="text-container">
