--- a/Semana 3 - Planetas y Satélites/Urano.html
+++ b/Semana 3 - Planetas y Satélites/Urano.html
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="column landing-image">
                     <div class="column landing-image">
-                        <img class="" src="img/oberonUrano.jpg">
+                        <img class="" src="img/oberonUrano.png">
                     </div>
                     <div class="column landing-message">
                         <div class="text-container">
@@ -63,7 +63,7 @@
                 </div>
                 <div class="column landing-message">
                     <div class="column landing-image">
-                        <img class="" src="img/mirandaUrano.jpg">
+                        <img class="" src="img/mirandaUrano.png">
                     </div>
                     <div class="column landing-message">
                         <div class="text-container">
