Added Footer and fixed CSS minor details

--- a/Semana 3 - Planetas y Satélites/Jupiter.html
+++ b/Semana 3 - Planetas y Satélites/Jupiter.html
@@ -93,7 +93,33 @@
                 </div>
             </div>
         </section>
-
+        <footer>
+            <div class="row">
+                <div class="column">
+                    <h3>MENÚ</h3>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="Tierra.html">Tierra</a></li>
+                        <li><a href="Marte.html">Marte</a></li>
+                        <li><a href="Jupiter.html">Júpiter</a></li>
+                        <li><a href="Saturno.html">Saturno</a></li>
+                        <li><a href="Urano.html">Urano</a></li>
+                        <li><a href="Neptuno.html">Neptuno</a></li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <h3>INTEGRANTES</h3>
+                    <ul class="footer-links">
+                    <li>Thomas Emanuel Bermudez Mora</li>
+                    <li>Freidzon Esyin Calderón Jiménez</li>
+                    <li>Héctor Emilio Camacho Díaz</li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <div>
+                <p>Copyright &copy; 2022 Universidad Cenfec BISOFT-04.</p>
+            </div>
+      </footer>
     </body>
-
 </html>
