--- a/Semana 3 - Planetas y Satélites/index.html
+++ b/Semana 3 - Planetas y Satélites/index.html
@@ -10,10 +10,10 @@
     </head>
     <body>
         <nav>
-            <a href="index.html">INICIO</a>
+            <a class="active" href="index.html">INICIO</a>
             <a href="Tierra.html">TIERRA</a>
             <a href="Marte.html">MARTE</a>
-            <a href="Jupiter.html">JUPITER</a>
+            <a href="Jupiter.html">JÚPITER</a>
             <a href="Saturno.html">SATURNO</a>
             <a href="Urano.html">URANO</a>
             <a href="Neptuno.html">NEPTUNO</a>
@@ -29,5 +29,33 @@
                 <img src="img/astronaut-suit-amico-9631.webp">
             </div>
         </section>
+        <footer>
+            <div class="row">
+                <div class="column">
+                    <h3>MENÚ</h3>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="Tierra.html">Tierra</a></li>
+                        <li><a href="Marte.html">Marte</a></li>
+                        <li><a href="Jupiter.html">Júpiter</a></li>
+                        <li><a href="Saturno.html">Saturno</a></li>
+                        <li><a href="Urano.html">Urano</a></li>
+                        <li><a href="Neptuno.html">Neptuno</a></li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <h3>INTEGRANTES</h3>
+                    <ul class="footer-links">
+                    <li>Thomas Emanuel Bermudez Mora</li>
+                    <li>Freidzon Esyin Calderón Jiménez</li>
+                    <li>Héctor Emilio Camacho Díaz</li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <div>
+                <p>Copyright &copy; 2022 Universidad Cenfec BISOFT-04.</p>
+            </div>
+      </footer>
     </body>
 </html>
