--- a/Semana 3 - Planetas y Satélites/Marte.html
+++ b/Semana 3 - Planetas y Satélites/Marte.html
@@ -21,68 +21,95 @@
             <a href="Urano.html">URANO</a>
             <a href="Neptuno.html">NEPTUNO</a>
         </nav>
-    </body>
-    <section class="row">
-        <div class="column landing-image">
-            <img class="" src="img/marte.png">
-        </div>
-        <div class="column landing-message">
-            <div class="text-container">
-                <h1>MARTE<br>EL PLANETA ROJO</h1>
-                <p>Marte es el cuarto planeta en orden de distancia al Sol y el segundo más pequeño del sistema solar,
-                    después de Mercurio. Recibió su nombre en homenaje al dios de la guerra de la mitología romana (Ares
-                    en la mitología griega), y también es conocido como «el planeta rojo» debido a la apariencia rojiza
-                    que le confiere el óxido de hierro predominante en su superficie. Marte es el planeta interior más
-                    alejado del Sol. Es un planeta telúrico con una atmósfera delgada de dióxido de carbono, y tiene dos
-                    satélites pequeños y de forma irregular, <strong>Fobos</strong> y <strong>Deimos</strong> (hijos del
-                    dios griego), que podrían ser asteroides capturados similares al asteroide troyano (5261) Eureka.
-                    Sus características superficiales recuerdan tanto a los cráteres de la Luna como a los valles,
-                    desiertos y casquetes polares de la Tierra.</p>
-            </div>
-        </div>
-    </section>
-    <section class="moons-container">
-        <h1>LUNAS DE MARTE</h1>
-        <div class="row">
+        <section class="row">
             <div class="column landing-image">
-                <div class="column landing-image">
-                    <img class="" src="img/Recurso 1.png">
-                </div>
-                <div class="column landing-message">
-                    <div class="text-container">
-                        <h2>FOBOS</h2>
-                        <p>Fobos (del griego Φóβoς, "miedo") es el más grande de los dos satélites de Marte y el más
-                            cercano al planeta, siendo Deimos el otro satélite. Ambos fueron descubiertos por el
-                            astrónomo estadounidense Asaph Hall (1829-1907) el 18 de agosto de 1877, con el gran
-                            refractor de 66 cm del Observatorio Naval de los Estados Unidos de Washington D. C., obra
-                            del óptico norteamericano Alvan Clark (1804-1887). Fue el propio descubridor el que propuso
-                            los nombres, inspirado por el libro XV de la Ilíada, en el que el dios Ares (Marte en la
-                            mitología romana) invoca al miedo (fobos) y al terror (deimos).
-                        </p>
-                    </div>
-                </div>
+                <img class="" src="img/marte.png">
             </div>
             <div class="column landing-message">
+                <div class="text-container">
+                    <h1>MARTE<br>EL PLANETA ROJO</h1>
+                    <p>Marte es el cuarto planeta en orden de distancia al Sol y el segundo más pequeño del sistema solar,
+                        después de Mercurio. Recibió su nombre en homenaje al dios de la guerra de la mitología romana (Ares
+                        en la mitología griega), y también es conocido como «el planeta rojo» debido a la apariencia rojiza
+                        que le confiere el óxido de hierro predominante en su superficie. Marte es el planeta interior más
+                        alejado del Sol. Es un planeta telúrico con una atmósfera delgada de dióxido de carbono, y tiene dos
+                        satélites pequeños y de forma irregular, <strong>Fobos</strong> y <strong>Deimos</strong> (hijos del
+                        dios griego), que podrían ser asteroides capturados similares al asteroide troyano (5261) Eureka.
+                        Sus características superficiales recuerdan tanto a los cráteres de la Luna como a los valles,
+                        desiertos y casquetes polares de la Tierra.</p>
+                </div>
+            </div>
+        </section>
+        <section class="moons-container">
+            <h1>LUNAS DE MARTE</h1>
+            <div class="row">
                 <div class="column landing-image">
-                    <img class="" src="img/Recurso 2.png">
+                    <div class="column landing-image">
+                        <img class="" src="img/Recurso 1.png">
+                    </div>
+                    <div class="column landing-message">
+                        <div class="text-container">
+                            <h2>FOBOS</h2>
+                            <p>Fobos (del griego Φóβoς, "miedo") es el más grande de los dos satélites de Marte y el más
+                                cercano al planeta, siendo Deimos el otro satélite. Ambos fueron descubiertos por el
+                                astrónomo estadounidense Asaph Hall (1829-1907) el 18 de agosto de 1877, con el gran
+                                refractor de 66 cm del Observatorio Naval de los Estados Unidos de Washington D. C., obra
+                                del óptico norteamericano Alvan Clark (1804-1887). Fue el propio descubridor el que propuso
+                                los nombres, inspirado por el libro XV de la Ilíada, en el que el dios Ares (Marte en la
+                                mitología romana) invoca al miedo (fobos) y al terror (deimos).
+                            </p>
+                        </div>
+                    </div>
                 </div>
                 <div class="column landing-message">
-                    <div class="text-container">
-                        <h2>DEIMOSS</h2>
-                        <p>Deimos (del griego Δείμος, «terror») es el más pequeño y externo de los dos satélites de
-                            Marte y uno de los satélites más pequeños que han recibido nombre, llamado así por Deimos,
-                            un personaje de la mitología griega. En rotación síncrona con el planeta, recorre una órbita
-                            casi circular, muy próxima al plano ecuatorial marciano, en 30,3 horas: un periodo
-                            ligeramente superior a la rotación del planeta rojo.Es de forma irregular. Tiene un
-                            diámetro medio de 12,4 km, una masa estimada de 1,4763x1015 kg y una densidad media de 1471
-                            kg/m³. Su composición, supuesta similar a la de los asteroides de tipo D y los núcleos
-                            cometarios extintos, plantea serias dificultades a los estudiosos que tratan de explicar su
-                            origen.
-                        </p>
+                    <div class="column landing-image">
+                        <img class="" src="img/Recurso 2.png">
+                    </div>
+                    <div class="column landing-message">
+                        <div class="text-container">
+                            <h2>DEIMOSS</h2>
+                            <p>Deimos (del griego Δείμος, «terror») es el más pequeño y externo de los dos satélites de
+                                Marte y uno de los satélites más pequeños que han recibido nombre, llamado así por Deimos,
+                                un personaje de la mitología griega. En rotación síncrona con el planeta, recorre una órbita
+                                casi circular, muy próxima al plano ecuatorial marciano, en 30,3 horas: un periodo
+                                ligeramente superior a la rotación del planeta rojo.Es de forma irregular. Tiene un
+                                diámetro medio de 12,4 km, una masa estimada de 1,4763x1015 kg y una densidad media de 1471
+                                kg/m³. Su composición, supuesta similar a la de los asteroides de tipo D y los núcleos
+                                cometarios extintos, plantea serias dificultades a los estudiosos que tratan de explicar su
+                                origen.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-
+        </section>
+        <footer>
+            <div class="row">
+                <div class="column">
+                    <h3>MENÚ</h3>
+                    <ul>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="Tierra.html">Tierra</a></li>
+                        <li><a href="Marte.html">Marte</a></li>
+                        <li><a href="Jupiter.html">Júpiter</a></li>
+                        <li><a href="Saturno.html">Saturno</a></li>
+                        <li><a href="Urano.html">Urano</a></li>
+                        <li><a href="Neptuno.html">Neptuno</a></li>
+                    </ul>
+                </div>
+                <div class="column">
+                    <h3>INTEGRANTES</h3>
+                    <ul class="footer-links">
+                    <li>Thomas Emanuel Bermudez Mora</li>
+                    <li>Freidzon Esyin Calderón Jiménez</li>
+                    <li>Héctor Emilio Camacho Díaz</li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <div>
+                <p>Copyright &copy; 2022 Universidad Cenfec BISOFT-04.</p>
+            </div>
+      </footer>
+    </body>
 </html>
