Fixed typo error

--- a/Semana 3 - Planetas y Satélites/Marte.html
+++ b/Semana 3 - Planetas y Satélites/Marte.html
@@ -108,7 +108,7 @@
             </div>
             <hr>
             <div>
-                <p>Copyright &copy; 2022 Universidad Cenfec BISOFT-04.</p>
+                <p>Copyright &copy; 2022 Universidad Cenfotec BISOFT-04.</p>
             </div>
       </footer>
     </body>
