--- a/Semana 3 - Planetas y Satélites/index.html
+++ b/Semana 3 - Planetas y Satélites/index.html
@@ -54,7 +54,7 @@
             </div>
             <hr>
             <div>
-                <p>Copyright &copy; 2022 Universidad Cenfec BISOFT-04.</p>
+                <p>Copyright &copy; 2022 Universidad Cenfotec BISOFT-04.</p>
             </div>
       </footer>
     </body>
