Fixed label bugs
It was a bug caused because some labels and inputs shared the same id

--- a/Semana 2 - Forms/formHotel.html
+++ b/Semana 2 - Forms/formHotel.html
@@ -59,16 +59,16 @@
             </div>
             <div id="honeymoonExtra" class="extraFields">
                 <div class="checkBoxInputs">
-                    <label for="arePets">Servicio al cuarto</label>
+                    <label for="roomService">Servicio al cuarto</label>
+                    <input type="checkbox" id="roomService"/>
+                </div>
+                <div class="checkBoxInputs">
+                    <label for="dinnerExtra">Cena ambientada</label>
                     <input type="checkbox" id="dinnerExtra"/>
                 </div>
                 <div class="checkBoxInputs">
-                    <label for="arePets">Cena ambientada</label>
-                    <input type="checkbox" id="dinnerExtra"/>
-                </div>
-                <div class="checkBoxInputs">
-                    <label for="arePets">Decoración temática</label>
-                    <input type="checkbox" id="dinnerExtra"/>
+                    <label for="roomDecoration">Decoración temática</label>
+                    <input type="checkbox" id="roomDecoration"/>
                 </div>
             </div>
             <div class="alignedItems">
